# Calculator

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.WTFPL  Readme.md
buildScript/ubuntu/: PlaceHolder
buildScript/windows/: Build.ps1  Clean.ps1  Gen.ps1  PlaceHolder.md
doc/: Designing A Calculator with FSM Logic – Robert Vunabandi – Medium.url  Doc.md
include/tinyexpr/: CMakeLists.txt
lib/: PlaceHolder
src/: macro.h  main.cpp
test/test1/: CMakeLists.txt  pch.h  test.cmd  test1.cpp
test/test2/: CMakeLists.txt  test.cmd  test2.cpp
